--- a/package.json
+++ b/package.json
@@ -49,5 +49,5 @@
   "bugs": {
     "url": "https://github.com/narahda/sloth/issues"
   },
-  "homepage": "https://github.com/narahda/sloth#readme"
+  "homepage": "." //https://github.com/narahda/sloth#readme
 }
