--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.1",
+    "node-rtsp-stream": "0.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -49,5 +50,5 @@
   "bugs": {
     "url": "https://github.com/narahda/sloth/issues"
   },
-  "homepage": "." //https://github.com/narahda/sloth#readme
+  "homepage": "."
 }
